# vibe-bridge

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  install_host.sh  pyproject.toml  request.md
C_context/: AIKB_Project_Definition.md  MEMORY.md
C_context/skills/aikb-board-control-loop/: SKILL.md
C_context/skills/vibe-bridge-control-loop/: SKILL.md
T_tools/: build_windows_product.ps1
adapters/claude-code-hook/: README.md  index.js
crates/vb-agent/: Cargo.toml
crates/vb-agent/src/: lib.rs  transcript.rs
crates/vb-core/: Cargo.toml
crates/vb-core/src/: lib.rs
crates/vb-daemon/: Cargo.toml
crates/vb-daemon/src/: conpty.rs  lib.rs  main.rs
crates/vb-host/: Cargo.toml
crates/vb-host/src/: agent_discovery.rs  lib.rs  main.rs  windows_terminal.rs
crates/vb-platform/: Cargo.toml
crates/vb-platform/src/: lib.rs  linux.rs  macos.rs  mock.rs  windows.rs
crates/vb-protocol/: Cargo.toml
crates/vb-protocol/src/: codec.rs  lib.rs  payloads.rs
crates/vb-transport/: Cargo.toml
crates/vb-transport/src/: lib.rs  windows.rs
desktop/: index.html  package.json
desktop/src/: main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: hid_protocol.md
examples/: kitty_demo_image.ppm  kitty_markdown_demo.md
plugins/terminal_demo/: main.py  skill.yaml
scripts/: probe_hidraw.sh  send_kitty_png.py  send_markdown_to_device.py  smoke_cell_cycle.sh  smoke_pty_real_codex.sh  windows_force_terminal.ps1  windows_input_watch.ps1  windows_session_smoke.ps1  windows_status.ps1
src/vibe_bridge/: __init__.py  agent_scanner.py  bootstrap.py  daemon.py  forwarder.py  hid_protocol.py  main.py  mock_hid.py  plugin_client.py  pty_runner.py  session_manager.py  transport.py  transport_hidraw.py  transport_win_hid.py  vt100_router.py  windows_host.py  windows_runner.py  wrapper.py
tests/: conftest.py  test_agent_scanner.py  test_bootstrap.py  test_daemon_real_hid.py  test_forwarder.py  test_hid_protocol.py  test_integration_window.py  test_main.py  test_mock_hid.py  test_plugin_client.py  test_pty_runner.py  test_send_markdown_to_device.py  test_session_manager.py  test_transport_hidraw.py  test_transport_win_hid.py  test_vt100_router.py  test_windows_runner.py  test_wrapper.py
vibe_bridge/: __init__.py
