[workspace]
resolver = "2"
members = [
    "crates/vb-core",
    "crates/vb-protocol",
    "crates/vb-transport",
    "crates/vb-platform",
    "crates/vb-agent",
    "crates/vb-daemon",
    "crates/vb-host",
]
exclude = [
    "desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
