[package]
name = "vb-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vb-core = { path = "../vb-core" }
vb-host = { path = "../vb-host" }

[lib]
name = "vb_daemon"
path = "src/lib.rs"

[[bin]]
name = "vb-daemon"
path = "src/main.rs"
