[package]
name = "vb-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vb-core = { path = "../vb-core" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
name = "vb_platform"
path = "src/lib.rs"
