[package]
name = "vb-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vb-core = { path = "../vb-core" }
vb-protocol = { path = "../vb-protocol" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[lib]
name = "vb_transport"
path = "src/lib.rs"
