[package]
name = "vibe-bridge-desktop"
version = "0.1.0"
description = "Vibe Bridge Windows desktop control plane"
authors = ["Serein"]
edition = "2021"

[lib]
name = "vibe_bridge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
vb-core = { path = "../../crates/vb-core" }
vb-host = { path = "../../crates/vb-host" }

